orchestrators/kubernetes/manifests/aqua_csp_009_enforcer/KubeEnforcer/003_kubeEnforcer_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
  labels:
    app: aqua-kube-enforcer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aqua-kube-enforcer
    spec:
      serviceAccountName: aqua-kube-enforcer-sa
      containers:
        - name: kube-enforcer
          image: registry.aquasec.com/kube-enforcer:5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: "aquasec-ssl"
              mountPath: "/certs"
      volumes:
        - name: "aquasec-ssl"
          secret:
            secretName: "aqua-ssl"
            items:
            - key: aqua.crt
              path: server.crt
            - key: aqua.key
              path: server.key            
      imagePullSecrets:
        - name: aqua-registry
  selector:
    matchLabels:
      app: aqua-kube-enforcer
