orchestrators/kubernetes/manifests/aqua_csp_009_enforcer/KubeEnforcer/001_kubeEnforcer_config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: kube-enforcer-admission-hook-config
  namespace: aqua
webhooks:
  - name: imageassurance.aquasec.com
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments", "replicasets", "replicationcontrollers", "statefulsets", "daemonsets", "jobs", "cronjobs"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRQ1kwYXoreDMvMWVqQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05NakF3TlRJM01qQTFNREUyV2hnUE1qSTVOREF6TVRJeU1EVXdNVFphTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQUxEOEhsN2pUdGpLNGZ6ZDRqanpkWUFkY2lXS3JjazFob3U2dWtVa25NVXNVODBEUmkwME5ic0gKdUd1N3Z3RVhOd1Z2NnY2Mi9PUCtNOWwvWmpKcUpNRXRZKzgyMGtKNUkxV2cwdDh2YW03ck45cmowRFhIb21ZQwpDWEZQb3hndjlC [...]
      service:
        namespace: aqua
        name: aqua-kube-enforcer
